--- a/app/views/enquiries/_listing.html.erb
+++ b/app/views/enquiries/_listing.html.erb
@@ -1,4 +1,19 @@
 <!-- Listing of enquiries -->
+<div class="brg0 legends" align="center">
+        <ul class="theme-colrs-lg">
+        <li><b>Legends</b></li>
+        <li><span class="red-theme-today"></span>&nbsp;Today</li>
+        <li><span class="yellow-theme-week"></span>&nbsp;This Week</li>
+        <li><span class="green-theme-reg"></span>&nbsp;Registered</li>
+        <li><img src='/images/icons/red.png'/>&nbsp;Score < 3</li>
+        <li><img src='/images/icons/yellow.png'/>&nbsp;Score 3-7</li>
+        <li><img src='/images/icons/green.png'/>&nbsp;Score > 7</li>
+        </ul>
+</div>
+
+<div class="cl"></div>
+<br/>
+
 <% _id =  @status + "_enquiries" %>
 <br/>
 
