--- a/app/views/enquiries/_show.html.erb
+++ b/app/views/enquiries/_show.html.erb
@@ -114,6 +114,7 @@ $(function(){
                         
                         <li><label>Course Subject</label>: <%= i.course_subject_text %> </li>
                         <li><label>Start Date</label>: <%= i.start_date %></li>
+                        <li><label>End Date</label>: <%= i.end_date %></li>
                         <div class="cl"></div>
                         <br/>
                         <span class="fl">
