--- a/app/views/enquiries/_note.html.erb
+++ b/app/views/enquiries/_note.html.erb
@@ -1,5 +1,5 @@
 <!-------------------------NOTE for Enq and Reg-------------------------------------->
-<% if @list.to_i == 1 && obj.notes.size > 0 %>
+
 <div class="brg0"></div>
      <div id="programme_note_<%= obj.id %>" style="background:#fff;padding-left:10px;" >
           <%= render 'notes/note', sub: obj %>
@@ -7,7 +7,7 @@
 <br/>
 <br/>
 
-<% end %>
+
 
 
 <!--------------------------------------------------------------->    
@@ -16,7 +16,7 @@
      <%= nested_form_for(obj,remote: true) do |r| %>
       <%= r.fields_for :notes,obj.notes.build do |n| %>
         <%= n.hidden_field :sub_class, value: obj_name.capitalize %>
-        <%= n.text_area :content,{:size => '10x3', :style => 'width:400px;',class: "app_note tinymce"} %>
+        <%= n.text_area :content,{:size => '10x3', :style => 'width:400px;',class: "app_note"} %>
       <% end %> 
       <br/>
       <%= r.submit "Write",{class: "btnp"} %>
@@ -28,13 +28,4 @@
     <br/>
 <!--------------------------------------------------------------->
 
-<script>
 
-tinymce.init({
-      selector: "textarea.tinymce",
-      toolbar1: "bold  italic",
-      menubar: "false",
-      statusbar: "false"
-});
-
-</script>
