--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -33,21 +33,48 @@
   <br/>  
       <div class="cols">
         <div class="col6">
-          <%= fs(f,"first_name","text_field",1) %>
+          <%= fs(f,[:first_name,
+                    tabindex: "1",
+                    :data => {:maxlength => "",
+                              :minlength => "",
+                              :label => "",
+                              :req => "Y"},
+                              :onblur => "validate(this.id,'AS');"],"text_field",1) %>
           <%= fs(f,[:date_of_birth,
+                    tabindex: "3",
                     :class => "dateField"],
                     "text_field",1) %>
-          <%= fs(f,"email1","text_field",1) %>
-          <%= fs(f,"mobile1","text_field",1) %>
-          <%= fs(f,"home_phone","text_field") %>
-          <%= fs(f,"address_line1","text_field",1) %>
-          <%= fs(f,"address_line2","text_field") %>
+          <%= fs(f,[:email1,
+                   tabindex: "5",
+                   :data => {:maxlength => "",
+                             :minlength => "",
+                             :label => "",
+                             :req => "Y"},
+                   :onblur => "validate(this.id,'E');"],"text_field",1) %>
+          <%= fs(f,[:mobile1,
+                    tabindex: "7",
+                    :data => {:maxlength => "",
+                              :minlength => "",
+                              :label => "",
+                              :req => "Y"},
+                    :onblur => "validate(this.id,'ANS');"],"text_field",1) %>
+          <%= fs(f,[:home_phone,
+                    tabindex: "9"],"text_field") %>
+          <%= fs(f,[:address_line1,
+                    tabindex: "11",
+                    :data => {:maxlength => "",
+                              :minlength => "",
+                              :label => "",
+                              :req => "Y"},
+                    :onblur => "validate(this.id,'');"],"text_field",1) %>
+          <%= fs(f,[:address_line2,
+                    tabindex: "13"],"text_field") %>
           <%= fs(f,[:address_country_id, 
                             Country.order(:name), 
                             :id, 
-                            :name,
-                            {:prompt => "--Country--"},
+                            :name,{},
                             {:class => "countries_select1",
+                             tabindex: "15",
                              :onchange => "prepareSelect(this,
                                            \'enquiry_programmes_attributes_index_city_id\',
                                            \'/get_cities/\');"}],"collection_select",1,"country") %>
@@ -55,28 +82,41 @@
                      User.order(:first_name), 
                      :id, 
                      :first_name,
-                     {:prompt => "--User--"}],"collection_select",1,"Assign To") %>
+                     {:prompt => "--User--"},{tabindex: "17"}],"collection_select",1,"Assign To") %>
+                     
+         <%= f.hidden_field :assigned_by, :value => current_user.id.to_s %> 
         </div>
         <div class="col6">
-          <%= fs(f,"surname","text_field",1) %>
+          <%= fs(f,[:surname,
+                    tabindex: "2",
+                    :data => {:maxlength => "",
+                              :minlength => "",
+                              :label => "",
+                              :req => "Y"},
+                              :onblur => "validate(this.id,'AS');"],"text_field",1) %>
           <div class="frbox">
           <%= f.label :gender %>
           <% {male: 'm', female: 'f'}.each do |i| %>
-            <%= f.radio_button :gender, i[1] %>
+            <%= f.radio_button :gender, i[1],{tabindex: "4"} %>
             <%= f.label i[0].to_s.strip %>
           <% end %>
           </div>
           <%= fs(f,[:country_id, 
                             Country.order(:name), 
                             :id, 
-                            :name,
-                            {:prompt => "--Country--"},
-                            {:class => "countries_select"}],"collection_select",1,"Nationality") %>
-          <%= fs(f,"email2","text_field") %>
-          <%= fs(f,"mobile2","text_field") %>
-          <%= fs(f,"work_phone","text_field") %>
-          <%= fs(f,"address_city","text_field",nil,"city") %>
-          <%= fs(f,"address_post_code","text_field",nil,"post_code") %>
+                            :name,{},
+                            {:class => "countries_select",tabindex: "6"}],
+                            "collection_select",1,"Nationality") %>
+          <%= fs(f,[:email2,
+                    tabindex: "8"],"text_field") %>
+          <%= fs(f,[:mobile2,
+                    tabindex: "10"],"text_field") %>
+          <%= fs(f,[:work_phone,
+                    tabindex: "12"],"text_field") %>
+          <%= fs(f,[:address_city,
+                    tabindex: "14"],"text_field",nil,"city") %>
+          <%= fs(f,[:address_post_code,
+                    tabindex: "16"],"text_field",nil,"post_code") %>
         </div>
   </div>
   <br/>
@@ -94,7 +134,13 @@
   <br/>  
       <div class="cols">
         <div class="col6">
-          <%= fs(f,"passport_number","text_field",1) %>
+          <%= fs(f,[:passport_number,
+                    tabindex: "18",
+                    :data => {:maxlength => "",
+                              :minlength => "",
+                              :label => "",
+                              :req => "Y"},
+                    :onblur => "validate(this.id,'ANS');"],"text_field",1) %>
           <%= fs(f,[:passport_valid_till,
                     :class => "dateField"],"text_field") %>
         </div>
@@ -216,6 +262,9 @@
                                      :autocomplete => "off"} %>
             &nbsp;<%= f.label i[0] %>&nbsp;&nbsp;&nbsp;&nbsp;
           <% end %>
+          <br/>
+          <br/>
+          <br/>
           <div id="reg_direct">
             <%= go_create(f,"student_source","reg_source_id","name",1) %>  
           </div>
@@ -240,13 +289,23 @@
   <div class="cols">
         <div class="col6">
           
-          <%= fs(f,"emer_full_name","text_field",1,"Full Name") %>
+          <%= fs(f,[:emer_full_name,
+                    :data => {:maxlength => "",
+                              :minlength => "",
+                              :label => "",
+                              :req => "Y"},
+                    :onblur => "validate(this.id,'ANS');"],"text_field",1,"Full Name") %>
           <div class="frbox">
             <%= f.label nil,"Relationship" %> 
             <%= f.select(:emer_relationship,%w(Father Mother Husband Wife Brother Sister Cousin Uncle Friend Other))%>
         </div>
          
-          <%= fs(f,"emer_mobile","text_field",1,"Mobile") %>
+          <%= fs(f,[:emer_mobile,
+                   :data => {:maxlength => "",
+                              :minlength => "",
+                              :label => "",
+                              :req => "Y"},
+                    :onblur => "validate(this.id,'ANS');"],"text_field",1,"Mobile") %>
           <%= fs(f,"emer_email","text_field",nil,"Email") %>
           
         </div>
