--- a/app/views/registrations/_listing.html.erb
+++ b/app/views/registrations/_listing.html.erb
@@ -1,4 +1,15 @@
 <!-- Registration datatable -->
+<div class="brg0 legends padt5" align="center">
+        <ul class="theme-colrs-lg">
+        <li><b>Legends</b></li>
+        <li><span class="red-theme-today"></span>&nbsp;Today</li>
+        <li><span class="yellow-theme-week"></span>&nbsp;This Week</li>
+        <li><span class="green-theme-reg"></span>&nbsp;Registered</li>
+        </ul>
+</div>
+
+<div class="cl"></div>
+<br/>
 <% _id =  @status + "_registrations" %>
 <br/>
 <%= form_tag(url_for: "/asdf") do %>
@@ -79,6 +90,7 @@
                                         title: "Use the dropdown to filter search. Use reset to clear the search box"} %>
 
  <span class="fr btnp" style="margin-left:10px" onclick="resetDataTable();">Reset</span>&nbsp;
+
 <!----------------------- Search filter ---------------------------->
        <%= select_tag :abdc,
                       options_for_select((@cols - [:follow_up_date]).map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["--Filter By--",""])),
