--- a/app/views/todos/_show_hover.html.erb
+++ b/app/views/todos/_show_hover.html.erb
@@ -1,10 +1,40 @@
 <h4>
+<img src="/images/icons/org_todos.png" width=20 />
 Todo
 </h4>
-<div class="htab" style="height:0">&nbsp;</div>
+<br/>
+<br/>
+<div style="height:0">&nbsp;</div>
 <div class="previewBox">
+<% if !@todo.enquiry_id.nil? %>
+  Associated with: <%= link_to 'Enquiry',"/enquiries/#{@todo.enquiry_id}" %>
+<% end %>
+<% if !@todo.registration_id.nil? %>
+  Associated with: <%= link_to 'Registration',"/registrations/#{@todo.registration_id}" %>
+<% end %>
+<% u = @todo._ass_by %>
+<%= image_tag((u.image? ? u.image_url : "/images/icons/user.png"),
+                                   {width: "40",
+                                    class: "imgb fl",
+                                    style: "margin-right:10px;"})  rescue nil %>
+               <span style="color:#999;">
+                <ul class="vlsdet">
+                   <li><label>Topic </label>:  <%= @todo.topic.name rescue "Unknown" %></li>
+                   <br/>
+                   
+                
+                </ul>
+               </span>
+               <%= link_to u.first_name,u  rescue nil%> 
+              &nbsp;&nbsp; 
+              <%= @todo.created_at.strftime("%A, %F %R %p") rescue "Unknown" %>
+               <br/>
+               <br/>
+
+
+
 <ul class="vlsdet">
-   <li><label>Topic </label>: <%= @todo.topic.name rescue "Unknown" %></li>
+
    <li><label>Status </label>: <%= @todo.status.name rescue "Unknown" %></li>
    <li><label>Due Date </label>: <%= @todo.duedate.strftime("%F %R %p") rescue "Unknown" %></li>
    <li><label>Priority </label>: <%= @todo.priority %></li>
@@ -15,4 +45,5 @@ Todo
    <li><label>Description </label>: <%= @todo.desc %></li>
 </ul>
 </div>
-
+<br/>
+<br/>
