--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,40 +1,15 @@
-<p id="notice"><%= notice %></p>
+<!-- Calendar -->
+<div class="tab-container">
+    <div class="tab-content" style="display: block;">
+        <div class="boxp box-theme-ch">
+          <%= render 'show_hover' %>
+          
+        </div>
+    </div>
+</div>
 
-<p>
-  <b>Topic:</b>
-  <%= @todo.topic_id %>
-</p>
-
-<p>
-  <b>Desc:</b>
-  <%= @todo.desc %>
-</p>
-
-<p>
-  <b>Status:</b>
-  <%= @todo.status_id %>
-</p>
-
-<p>
-  <b>Duedate:</b>
-  <%= @todo.duedate %>
-</p>
-
-<p>
-  <b>Priority:</b>
-  <%= @todo.priority %>
-</p>
-
-<p>
-  <b>Created by:</b>
-  <%= @todo.created_by %>
-</p>
-
-<p>
-  <b>Updated by:</b>
-  <%= @todo.updated_by %>
-</p>
-
-
-<%= link_to 'Edit', edit_todo_path(@todo) %> |
-<%= link_to 'Back', todos_path %>
+<script>
+$(function(){
+    activeMM("todosMM");
+});
+</script>
