todos legend css, go create title css

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -291,8 +291,8 @@ $(function(){
         
         <div class="fl brg0">
         <ul class="theme-colrs-lg">
-        <li><span class="blue-theme-todo"></span>&nbsp;Todos</li>
-        <li><span class="blue-theme-followup"></span>&nbsp;Follow Ups</li></ul></div>
+        <li><span class="blue-theme-todo">&nbsp;</span>&nbsp;Todos</li>
+        <li><span class="blue-theme-followup">&nbsp;</span>&nbsp;Follow Ups</li></ul></div>
     </td>
     </tr>
     </table>
