removed country, city, invited by, hover

--- a/app/views/emails/_show_hover.html.erb
+++ b/app/views/emails/_show_hover.html.erb
@@ -1,3 +1,9 @@
+<script>
+$(function(){
+    setColorsFromSession();
+});
+
+</script>
 <h4 >
 Email
 </h4>
@@ -15,4 +21,5 @@ Email
    <li><label>Signature </label>: <%= @email.signature.html_safe %></li>
 </ul>
 </div>
+
 
