--- a/app/views/enquiries/_email.html.erb
+++ b/app/views/enquiries/_email.html.erb
@@ -18,7 +18,7 @@
                         <td><%= email.created_at.strftime("%F %R %p") %></td>
                         <td><%= email._cre_by.name rescue "" %></td>
                         <td><%= (email.from.nil? ? email.smtp.name : email.from) rescue "unknown" %></td>
-                        <td  class="preview" data-email_id='<%= email.id %>'>...</td>
+                        <td  class="preview" data-email_id='<%= email.id %>' data-type="E">...</td>
                    </tr>
                <% end %>
                     <tr>
