added block in legends

--- a/app/views/follow_ups/index.html.erb
+++ b/app/views/follow_ups/index.html.erb
@@ -18,8 +18,8 @@ Choose a date(click) or a date range(click & drag) to create a follow up/todo
 
 <div class="fr brg0">
 <ul class="theme-colrs-lg">
-<li><span class="blue-theme-todo"></span>&nbsp;Todos</li>
-<li><span class="blue-theme-followup"></span>&nbsp;Follow Ups</li></ul></div>
+<li><span class="blue-theme-todo">&nbsp;</span>&nbsp;Todos</li>
+<li><span class="blue-theme-followup">&nbsp;</span>&nbsp;Follow Ups</li></ul></div>
 <br/>
 <br/>
 <div class="brg01"></div>
