--- a/app/views/enquiries/_listing.html.erb
+++ b/app/views/enquiries/_listing.html.erb
@@ -96,7 +96,7 @@
 <!----------------------- Search filter---------------------------->
        <%= select_tag :abdc,
                       options_for_select((@cols - [:follow_up_date]).map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["--Filter By--",""])),
-                      {id: "mySelect",style: "width:150px;margin-left:10px;height:24px;",class: "srch_sel"} %>
+                      {id: "mySelect",style: "width:150px;margin-left:10px;height:24px;",class: "srch_sel fr"} %>
 
 
 
