--- a/app/views/shared/_resources.html.erb
+++ b/app/views/shared/_resources.html.erb
@@ -1,89 +1,82 @@
+<div class="col-md-3">
+  <ul class="nav nav-pills nav-stacked">
+      <% [:programme_type,:application_status,:contact_type,
+      :course_level,:course_subject,:doc_category,
+      :english_level,:enquiry_status,:event_type,
+      :exam_type,:qualification,:student_source,
+      :sub_agent,:todo_status,:todo_topic].each do |r| %>
+      <% if can? :read, r.to_s.camelize.constantize %>
+      <li>
+         <%= link_to r.to_s.titleize.pluralize,"/" + r.to_s.pluralize %>
+      </li>
+      <% end %>
+      <% end %>
+  </ul>
+</div>
 <!-- resources -->
-
-
-<div class="tab-container">
-    <div class="tab-content" style="display: block;">
-        <div class="boxp box-theme-ch">
-        <h2 class="htab">All <%= resource_disp2 %></h2>
-        <br/>
-        <br/>
-        <br/>
-          <table  class="tables2" border="0" cellpadding="0" cellspacing="0" width="100%">
-              <tr>
-                <th>Name</th>
-                <th colspan="2">Description</th>
-                <th>Created By</th>
-                <th>Created At</th>
-                <th>Last Modified By</th>
-                <th>Last Modified At</th>
-                <th>Delete</th>
-              </tr>
-
-            <% resource.each do |r| %>
-              <tr>
-                <td>
-                  <%= best_in_place_if (can? :update,r), r, :name,display_as: :tname %>
-                </td>
-                <td colspan="2">
-                  <%= best_in_place_if (can? :update,r), r, :desc,:type => :textarea %>
-                </td>
-                <td class="grey"><%= r.cby %></td>
-                <td class="grey"><%= r.created_at.strftime("%F %R %p") rescue "Unknown" %></td>
-                <td class="grey"><%= r.uby %></td>
-                <td class="grey"><%= r.updated_at.strftime("%F %R %p") rescue "Unknown" %></td>
-                <td>
-                  <%= link_to image_tag("/images/icons/del.png"),r, method: :delete, data: { confirm: 'Are you sure?' }  %>
-                </td>
-              </tr>
-            <% end %>
+<% resource_disp1 = "Programme Type" %>
+<% resource_disp2 = "Programme Types" %>
+<% resource = ProgrammeType.all %>
+<% new_resource = ProgrammeType.new %>
+<div class="col-md-9">
+  <div class="config-content">
+    <div class="row row-top">
+      <h3><%= resource_disp2 %></h3>
+    </div>
+    <div class="row">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Created</th>
+            <th>Last Modified</th>
+            <th>&nbsp;</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% resource.each do |r| %>
             <tr>
-              <td colspan="1" align="left">
-                <%= link_to 'Enquiries',enquiries_path%>
+              <td>
+                <%= best_in_place_if (can? :update,r), r, :name,display_as: :tname %>
               </td>
-              <td colspan="1" align="left">
-                <%= link_to 'Registrations',registrations_path%>
+              <td>
+                <%= best_in_place_if (can? :update,r), r, :desc,:type => :textarea %>
               </td>
-              <td colspan="6" align="left">
+              <td><%= r.cby %>(<%= r.created_at.strftime("%F %R %p") rescue "Unknown" %>)</td>
+              <td><%= r.uby %>(<%= r.updated_at.strftime("%F %R %p") rescue "Unknown" %>)</td>
+              <td>
+                <%= link_to '<span class="glyphicon glyphicon-trash"></span>'.html_safe, r, method: :delete, data: { confirm: 'Are you sure?' }  %>
               </td>
             </tr>
-          </table>
-          <br/>
-          <br/>
-          <br/>
-          
-         <div id="new_resource_form">
-         <%= form_for(new_resource) do |f| %>
-          <ul class="vlsdet">
-           <h2 class="htab"> New <%= resource_disp1 %> </h2>
-           <br/>
-           <br/>
-           
-          <li class="frbox">
-            <label> Name </label> <%= f.text_field :name %>
-          </li>
-          
-          <li class="frbox">
-            <label> Description </label> <%= f.text_area :desc, {size: "10x3",style: 'width:400px;'} %>
-          </li>
-          <br/>
-          <br/>
-          <br/>
-          <li class="frbox">
-
-          <%= f.button "Create", class: "btnp" %>
-          </li>
-          </ul>
-
-        <% end %>
-        </div>
-        </div>
+          <% end %>
+        </tbody>
+      </table>
     </div>
+
+    <div class="row">
+      <div class="well">
+        <%= form_for(new_resource, html: {class: 'form-horizontal'}) do |f| %>
+          <h4 class="form-heading">New <%= resource_disp1 %></h4>
+          <div class="form-group">
+            <label for="id_name" class="control-label col-sm-2">Name</label>
+            <div class="col-sm-6">
+              <%= f.text_field :name, {class: 'form-control', size: nil} %>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="id_des" class="control-label col-sm-2">Description</label>
+            <div class="col-sm-6">
+              <%= f.text_area :desc, {class: 'form-control', cols: nil, rows: nil} %>
+            </div>
+          </div>
+          <div class="form-group form-last">
+            <div class="col-sm-offset-2 col-sm-5">
+              <%= f.submit "Create", {class: "btn btn-primary"} %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
-<script type="text/javascript">
-$(function(){
- activeMM("resourcesMM");
-});
-</script>
-
-
-
